a change in the gramatic

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 					<a href="https://prospectta.com/lecciones-de-liderazgo-de-walt-disney-comunicar-una-vision/"   > 
 						<div  class="  " data-aos="fade-up" data-aos-delay="1000" >
 							<div class="MsInf">
-								Mas informacion
+								Mas información
 							</div>
 						</div>
 					</a>
