change in the paddings

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<header id="header" class="full-header border-full-header transparent-header dark static-sticky"
 			data-sticky-class="not-dark" data-sticky-offset="full" data-sticky-offset-negative="100">
 
-			<div id="header-wrap">
+			<div id="header-wrap" class="" style="background:white">
 
 				<div class="container clearfix">
 
@@ -90,8 +90,11 @@
 						============================================= -->
 					<div id="logo">
 						<a href="#DisInit"><img src="images/Certificación Disney-01.png" alt="Disney"></a>
+						
 					</div><!-- #logo end -->
-
+						<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad"> <div class="buttom" style=""> 
+							<p class="buttom_p"> mas informacion </p>
+						</div></a>
 
 				</div>
 
@@ -137,7 +140,7 @@
 
 		</section><!-- #slider end -->
 		<div style="position:sticky;position: -webkit-sticky;z-index: 9000;top:30%;height:100px;width:100px;">
-				<a href="#whatsapp"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
+				<a href="#information"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
 				<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad/"><i class="fa fa-info-circle Icons_floating icon_info" aria-hidden="true"></i></a>
 			</div>
 		<!-- Content
@@ -332,7 +335,7 @@
 
 	</div>
 
-	<div id="section-blog" class="page-section">
+	<div id="section-blog" class="page-section" style="padding-bottom:0px;">
 
 		<h2 class="center uppercase t300 ls3 font-body">Fecha</h2>
 
@@ -367,7 +370,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 col-padding">
 					<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-						<div class="oc-item"><img src="images/clients/patrocinadores/TMC_Logo.png"
+						<div id="information" class="oc-item"><img src="images/clients/patrocinadores/TMC_Logo.png"
 									alt="Clients"></div>
 					</div>
 				</div>
@@ -387,7 +390,7 @@
 
 	
 
-	<div id="section-contact" class="page-section notoppadding container">
+	<div id="section-contact" class="page-section notoppadding container" style="padding-bottom:80px">
 
 		<div class="row noleftmargin norightmargin bottommargin-lg align-items-stretch">
 			<div id="" class="col-lg-8 col-md-8 gmap  d-md-block">
@@ -432,7 +435,7 @@
 					<a href="https://prospectta.com/lecciones-de-liderazgo-de-walt-disney-comunicar-una-vision/"   > 
 						<div  class="  " data-aos="fade-up" data-aos-delay="1000" >
 							<div class="MsInf">
-								Mas información
+								Más información
 							</div>
 						</div>
 					</a>
@@ -530,6 +533,12 @@
 	<script src="js/aos.js"></script>
 	<script>
 		AOS.init();
+	  </script>
+
+	  <script>
+	  function alerta(){
+		  alert ("(503) 7862-3146");
+	  }
 	  </script>
 </body>
 
