a few change in the Disney web page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						
 					</div><!-- #logo end -->
 						<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad"> <div class="buttom" style=""> 
-							<p class="buttom_p"> mas informacion </p>
+							<p class="buttom_p"> más informacion </p>
 						</div></a>
 
 				</div>
@@ -386,7 +386,7 @@
 
 			</div>
 
-		</div>
+		</div  >
 
 	
 
