i add an animation to the buttom (mas informacion) and the effects from the  sticky bottoms are biggers

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						
 					</div><!-- #logo end -->
 						<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad"> <div class="buttom" style=""> 
-							<p class="buttom_p"> MÁS INFORMACION </p>
+							<p class="buttom_p"> MÁS INFORMACIÓN </p>
 						</div></a>
 
 				</div>
