adding functionalitys for the icon of whatssapp

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						
 					</div><!-- #logo end -->
 						<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad"> <div class="buttom" style=""> 
-							<p class="buttom_p"> MÁS<br class="jmp"> INFORMACIÓN </p>
+							<p class="buttom_p"> MÁS<br class="jmp"> INFORMACIÓN  </p>
 						</div></a>
 
 				</div>
@@ -140,7 +140,7 @@
 
 		</section><!-- #slider end -->
 		<div style="position:sticky;position: -webkit-sticky;z-index: 9000;top:30%;height:100px;width:100px;">
-				<a href="#information"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
+				<a href="https://api.whatsapp.com/send?phone=50378623146&text=Mas Informacion"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
 				<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad/"><i class="fa fa-info-circle Icons_floating icon_info" aria-hidden="true"></i></a>
 			</div>
 		<!-- Content
