adding a new date

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									class="big-video-button small-video-button pulse animated infinite"
 									data-lightbox="iframe"><i class="icon-line-play"></i></a><span
 									style="font-size:20px; margin-left:15px;">Play Video</span></div>
-						</div>
+						</div>  
 
 					</div>
 				</div>
@@ -140,7 +140,8 @@
 
 		</section><!-- #slider end -->
 		<div style="position:sticky;position: -webkit-sticky;z-index: 9000;top:30%;height:100px;width:100px;">
-				<a href="https://api.whatsapp.com/send?phone=50378623146&text=Mas Informacion"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
+				<!--<a href="https://api.whatsapp.com/send?phone=50378623146&text=Mas%20Informacion"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a> esto te envia a whatsapp-->
+				<a href="https://wa.me/50377451270?text=Me%20gustaría%20saber%20el%20precio%20del%20coche"><i class="fa fa-whatsapp Icons_floating  icon_whats" aria-hidden="true"></i></a>
 				<a href="https://prospectta.com/enfoque-disney-al-servicio-de-calidad/"><i class="fa fa-info-circle Icons_floating icon_info" aria-hidden="true"></i></a>
 			</div>
 		<!-- Content
@@ -345,7 +346,7 @@
 		<div class="section nomargin">
 			<div class="container clearfix">
 				<div class="divcenter center" style="max-width: 900px;">
-					<h2 class="nobottommargin t300 ls1">18 al 22 de septiembre 2019</h2>
+					<h2 class="nobottommargin t300 ls1">6 al 10 de noviembre 2019</h2>
 				</div>
 			</div>
 		</div>
